--- a/Ana_Minicomp.ipynb
+++ b/Ana_Minicomp.ipynb
@@ -1113,7 +1113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "minicomp",
+   "display_name": "minicomp_env",
    "language": "python",
    "name": "minicomp"
   },
@@ -1127,7 +1127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
