--- a/Generate validation set.ipynb
+++ b/Generate validation set.ipynb
@@ -5,7 +5,7 @@
    "id": "93a93ebf",
    "metadata": {},
    "source": [
-    "# Data exploration train.csv"
+    "# Generate validation set"
    ]
   },
   {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ec0a9b1f",
+   "id": "2dacb816",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,30 +54,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5a777452",
+   "execution_count": 15,
+   "id": "b5b0f87f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "435837\n",
-      "77119\n"
+      "New train set length: 435837\n",
+      "New validation set length: 77119\n"
      ]
     }
    ],
    "source": [
     "print(f\"New train set length: {len(newtrain_set)}\")\n",
-    "print(f\"New  set length: len(validation_set))\n",
-    "validation_set.to_csv(\"newtrain.csv\", header=True)\n",
-    "newtrain_set.to_csv(\"validation.csv\", header=True)"
+    "print(f\"New validation set length: {len(validation_set)}\")\n",
+    "validation_set.to_csv(\"data/newtrain.csv\", header=True)\n",
+    "newtrain_set.to_csv(\"data/validation.csv\", header=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "03ac98c6",
+   "id": "a2d49d1d",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16db56b7",
+   "id": "1277b79b",
    "metadata": {},
    "outputs": [],
    "source": []
