--- a/Generate validation set.ipynb
+++ b/Generate validation set.ipynb
@@ -44,10 +44,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2dacb816",
+   "id": "4c477c36",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split train and validation set at 2014-04-30\n",
     "validation_set = train_data[train_data['Date'] > '2014-04-30']\n",
     "newtrain_set = train_data[train_data['Date'] <= '2014-04-30']"
    ]
@@ -55,8 +56,10 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b5b0f87f",
-   "metadata": {},
+   "id": "5d600306",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -77,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a2d49d1d",
+   "id": "a35d8c1f",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1277b79b",
+   "id": "2ea0f478",
    "metadata": {},
    "outputs": [],
    "source": []
