--- a/Baseline Average.ipynb
+++ b/Baseline Average.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5ba2031",
+   "id": "5f7bf0e9",
    "metadata": {},
    "source": [
     "# Baseline: average sales"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ac8c3722",
+   "execution_count": 21,
+   "id": "6736198a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cc55f6ea",
+   "execution_count": 22,
+   "id": "aa277bec",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "435836            0            0.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,29 +150,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "39505200",
+   "execution_count": 23,
+   "id": "1768afd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define evaluation metrics\n",
+    "def metric(preds, actuals):\n",
+    "    preds = preds.reshape(-1)\n",
+    "    actuals = actuals.reshape(-1)\n",
+    "    assert preds.shape == actuals.shape\n",
+    "    return 100 * np.linalg.norm((actuals - preds) / actuals) / np.sqrt(preds.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a6b4ed14",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "metric newtrain=62.18357121836456\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# train set\n",
+    "mean = train_data['Sales'].mean()\n",
+    "preds = np.full(len(train_data), mean)\n",
+    "rmspe = metric(preds, np.array(train_data['Sales']))\n",
+    "\n",
+    "print(f'metric newtrain={rmspe}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1300b32a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean sales=6802.905730812207, std=3086.37471195454\n"
+      "metric valid=55.175812777068025\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "mean = train_data['Sales'].mean()\n",
-    "std = train_data['Sales'].std()\n",
-    "print(f'mean sales={mean}, std={std}')\n"
+    "# validation set\n",
+    "val_data = pd.read_csv(\"data/validation.csv\")\n",
+    "preds = np.full(len(val_data), mean)\n",
+    "rmspe = metric(preds, np.array(val_data['Sales']))\n",
+    "\n",
+    "print(f'metric valid={rmspe}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c3076bf",
+   "metadata": {},
+   "source": [
+    "# Create new categories for stores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9c979ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Store\n",
+      "1.0        4825.704485\n",
+      "2.0        4863.668407\n",
+      "3.0        6909.002660\n",
+      "4.0        9371.876640\n",
+      "5.0        4656.209302\n",
+      "              ...     \n",
+      "1111.0     5493.231579\n",
+      "1112.0    11131.632275\n",
+      "1113.0     6475.711688\n",
+      "1114.0    20091.239362\n",
+      "1115.0     5729.763636\n",
+      "Name: Sales, Length: 1115, dtype: float64\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'float' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-9d134d6a8d7b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlimits\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmeans\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Store'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Sales'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m5000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Store_cat'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"m\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'float' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "means = train_data.groupby(['Store']).mean()['Sales']\n",
+    "print(means)\n",
+    "limits = [0, 5000, 7500, 10000, 10000000]\n",
+    "mapping = []\n",
+    "for l in limits:\n",
+    "    for m in means:\n",
+    "        print(m)\n",
+    "\n",
+    "train_data[train_data['Sales'] > 5000, 'Store_cat'] = \"m\"\n",
+    "cat.mask(cat > 7500, \"h\")\n",
+    "\n",
+    "cat = train_data['Store_cat']\n",
+    "cat.mask(cat.mean() > 5000, \"m\")\n",
+    "cat.mask(cat.mean() > 7500, \"h\")\n",
+    "cat.mask(cat > 10000, \"vh\")\n",
+    "train_data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5bb816",
+   "id": "ef243360",
    "metadata": {},
    "outputs": [],
    "source": []
