--- a/Sabine full analysis.ipynb
+++ b/Sabine full analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "e7faa7bb",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "40523693",
    "metadata": {
     "scrolled": false
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "dcc926d4",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "max         1.000000       1.000000       1.000000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "9d7bb648",
    "metadata": {},
    "outputs": [
@@ -257,63 +257,63 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>637769</th>\n",
-       "      <td>2014-07-31</td>\n",
-       "      <td>752.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7259.0</td>\n",
-       "      <td>576.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>637770</th>\n",
-       "      <td>2014-07-31</td>\n",
-       "      <td>753.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9938.0</td>\n",
-       "      <td>796.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1115.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>637771</th>\n",
-       "      <td>2014-07-31</td>\n",
-       "      <td>754.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>10564.0</td>\n",
-       "      <td>1162.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>637772</th>\n",
-       "      <td>2014-07-31</td>\n",
-       "      <td>755.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>12302.0</td>\n",
-       "      <td>1020.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>379.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>637773</th>\n",
-       "      <td>2014-07-31</td>\n",
-       "      <td>751.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3913.0</td>\n",
-       "      <td>539.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>378.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
        "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>377.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>376.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>a</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -321,34 +321,34 @@
        "</div>"
       ],
       "text/plain": [
-       "              Date  Store  DayOfWeek    Sales  Customers  Open  Promo  \\\n",
-       "637769  2014-07-31  752.0        4.0   7259.0      576.0   1.0    1.0   \n",
-       "637770  2014-07-31  753.0        NaN   9938.0      796.0   1.0    1.0   \n",
-       "637771  2014-07-31  754.0        4.0  10564.0     1162.0   1.0    1.0   \n",
-       "637772  2014-07-31  755.0        4.0  12302.0     1020.0   1.0    1.0   \n",
-       "637773  2014-07-31  751.0        4.0   3913.0      539.0   1.0    1.0   \n",
+       "         Date   Store  DayOfWeek  Sales  Customers  Open  Promo StateHoliday  \\\n",
+       "0  2013-01-01  1115.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "1  2013-01-01   379.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "2  2013-01-01   378.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "3  2013-01-01   377.0        2.0    0.0        0.0   0.0    0.0            a   \n",
+       "4  2013-01-01   376.0        2.0    0.0        0.0   0.0    0.0            a   \n",
        "\n",
-       "       StateHoliday  SchoolHoliday  \n",
-       "637769            0            1.0  \n",
-       "637770            0            1.0  \n",
-       "637771            0            NaN  \n",
-       "637772            0            1.0  \n",
-       "637773            0            1.0  "
+       "   SchoolHoliday  \n",
+       "0            1.0  \n",
+       "1            1.0  \n",
+       "2            1.0  \n",
+       "3            1.0  \n",
+       "4            1.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# show example data \n",
-    "train_data.tail()"
+    "train_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "2ec510bc",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "        <AxesSubplot:>]], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -391,17 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "1cff8204",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc86090eeb0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc859d44f10>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e04eda1",
+   "id": "e65c3c2f",
    "metadata": {},
    "source": [
     "# Data Preprocessing 1"
@@ -433,8 +433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "0f72b35c",
+   "execution_count": 45,
+   "id": "bba1ae90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "dc7a1fe9",
+   "execution_count": 46,
+   "id": "4aa0a0c9",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "Name: StateHoliday, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,21 +474,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "0ba41b93",
+   "execution_count": 47,
+   "id": "a1612401",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "No           496853\n",
-       "Easter          415\n",
-       "Public           93\n",
+       "Public          415\n",
+       "Easter           93\n",
        "Christmas        35\n",
        "Name: StateHoliday, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,15 +498,15 @@
     "# renaming categories to be intuitive\n",
     "train_data['StateHoliday'] = train_data['StateHoliday'].replace(0.0, \"0\")\n",
     "train_data['StateHoliday'] = train_data['StateHoliday'].replace(\"0\", \"No\")\n",
-    "train_data['StateHoliday'] = train_data['StateHoliday'].replace(\"a\", \"Easter\")\n",
-    "train_data['StateHoliday'] = train_data['StateHoliday'].replace(\"b\", \"Public\")\n",
+    "train_data['StateHoliday'] = train_data['StateHoliday'].replace(\"a\", \"Public\")\n",
+    "train_data['StateHoliday'] = train_data['StateHoliday'].replace(\"b\", \"Easter\")\n",
     "train_data['StateHoliday'] = train_data['StateHoliday'].replace(\"c\", \"Christmas\")\n",
     "train_data['StateHoliday'].value_counts()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2993fee",
+   "id": "992560ee",
    "metadata": {},
    "source": [
     "# Generate validation set"
@@ -514,8 +514,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "36f6e8c0",
+   "execution_count": 48,
+   "id": "6f9ed8f8",
    "metadata": {},
    "outputs": [
     {
@@ -541,8 +541,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7b2c9c07",
+   "execution_count": 49,
+   "id": "03e5affd",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "      <td>9336.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -596,7 +596,7 @@
        "      <td>10770.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -607,7 +607,7 @@
        "      <td>7793.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -618,7 +618,7 @@
        "      <td>9561.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -629,7 +629,7 @@
        "      <td>15078.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -638,11 +638,11 @@
       ],
       "text/plain": [
        "              Date  Store  DayOfWeek    Sales  Open  Promo StateHoliday  \\\n",
-       "540801  2014-05-01  353.0        4.0   9336.0   NaN    1.0       Easter   \n",
-       "540889  2014-05-01  335.0        4.0  10770.0   1.0    1.0       Easter   \n",
-       "540921  2014-05-01  512.0        4.0   7793.0   1.0    1.0       Easter   \n",
-       "540934  2014-05-01  494.0        4.0   9561.0   1.0    1.0       Easter   \n",
-       "541003  2014-05-01  423.0        4.0  15078.0   1.0    NaN       Easter   \n",
+       "540801  2014-05-01  353.0        4.0   9336.0   NaN    1.0       Public   \n",
+       "540889  2014-05-01  335.0        4.0  10770.0   1.0    1.0       Public   \n",
+       "540921  2014-05-01  512.0        4.0   7793.0   1.0    1.0       Public   \n",
+       "540934  2014-05-01  494.0        4.0   9561.0   1.0    1.0       Public   \n",
+       "541003  2014-05-01  423.0        4.0  15078.0   1.0    NaN       Public   \n",
        "\n",
        "        SchoolHoliday  \n",
        "540801            0.0  \n",
@@ -652,7 +652,7 @@
        "541003            0.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "186aadd1",
+   "id": "313aac86",
    "metadata": {},
    "source": [
     "# Baseline model"
@@ -671,8 +671,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "153e627a",
+   "execution_count": 50,
+   "id": "4b809314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,8 +686,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "f95e9607",
+   "execution_count": 51,
+   "id": "a57f6946",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dd51ff6",
+   "id": "ddba3d2f",
    "metadata": {},
    "source": [
     "# Data preprocessing 2"
@@ -718,8 +718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "50b700b1",
+   "execution_count": 52,
+   "id": "f9acc9ad",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "      <td>3139.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>1.0</td>\n",
        "      <td>m</td>\n",
        "    </tr>\n",
@@ -775,7 +775,7 @@
        "      <td>2401.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>1.0</td>\n",
        "      <td>vh</td>\n",
        "    </tr>\n",
@@ -787,7 +787,7 @@
        "      <td>2646.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>1.0</td>\n",
        "      <td>m</td>\n",
        "    </tr>\n",
@@ -799,7 +799,7 @@
        "      <td>3113.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>1.0</td>\n",
        "      <td>h</td>\n",
        "    </tr>\n",
@@ -811,7 +811,7 @@
        "      <td>2907.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Easter</td>\n",
+       "      <td>Public</td>\n",
        "      <td>1.0</td>\n",
        "      <td>l</td>\n",
        "    </tr>\n",
@@ -821,11 +821,11 @@
       ],
       "text/plain": [
        "           Date  Store  DayOfWeek   Sales  Open  Promo StateHoliday  \\\n",
-       "27   2013-01-01  353.0        2.0  3139.0   1.0    0.0       Easter   \n",
-       "115  2013-01-01  335.0        2.0  2401.0   1.0    0.0       Easter   \n",
-       "147  2013-01-01  512.0        2.0  2646.0   1.0    0.0       Easter   \n",
-       "162  2013-01-01  494.0        2.0  3113.0   1.0    0.0       Easter   \n",
-       "199  2013-01-01  530.0        2.0  2907.0   1.0    0.0       Easter   \n",
+       "27   2013-01-01  353.0        2.0  3139.0   1.0    0.0       Public   \n",
+       "115  2013-01-01  335.0        2.0  2401.0   1.0    0.0       Public   \n",
+       "147  2013-01-01  512.0        2.0  2646.0   1.0    0.0       Public   \n",
+       "162  2013-01-01  494.0        2.0  3113.0   1.0    0.0       Public   \n",
+       "199  2013-01-01  530.0        2.0  2907.0   1.0    0.0       Public   \n",
        "\n",
        "     SchoolHoliday Store_cat  \n",
        "27             1.0         m  \n",
@@ -835,7 +835,7 @@
        "199            1.0         l  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30678635",
+   "id": "98674a34",
    "metadata": {},
    "outputs": [],
    "source": []
