--- a/Igor_Minicomp_Averages_over_Stores.ipynb
+++ b/Igor_Minicomp_Averages_over_Stores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "a6415565",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "2131d742",
    "metadata": {},
    "outputs": [
@@ -39,52 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c707d9f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###############################################################################################\n",
-    "###############################################################################################\n",
-    "###############################################################################################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "68e3946d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# profile_store_data = ProfileReport(store_data, title=\"Pandas Profiling Report store_data\")\n",
-    "# profile_store_data.to_file(\"Pandas_Profiling_Report_store_data.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "8c049b35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# profile_train_data = ProfileReport(train_data, title=\"Pandas Profiling Report train_data\")\n",
-    "# profile_train_data.to_file(\"Pandas_Profiling_Report_train_data.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "39b43e77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# profile_holdout_data = ProfileReport(holdout_data, title=\"Pandas Profiling Report holdout_data\")\n",
-    "# profile_holdout_data.to_file(\"Pandas_Profiling_Report_holdout_data.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "26c071bb",
    "metadata": {},
    "outputs": [],
@@ -96,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "06dd4786",
    "metadata": {},
    "outputs": [],
@@ -112,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "65d1399c",
    "metadata": {},
    "outputs": [
@@ -155,12 +110,12 @@
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>6909.002660</td>\n",
+       "      <td>6909.00266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>9371.876640</td>\n",
+       "      <td>9371.87664</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.0</th>\n",
@@ -203,23 +158,23 @@
        "</div>"
       ],
       "text/plain": [
-       "        Store_ID     Avg_Sales\n",
-       "1.0          1.0   4825.704485\n",
-       "2.0          2.0   4863.668407\n",
-       "3.0          3.0   6909.002660\n",
-       "4.0          4.0   9371.876640\n",
-       "5.0          5.0   4656.209302\n",
-       "...          ...           ...\n",
-       "1111.0    1111.0   5493.231579\n",
-       "1112.0    1112.0  11131.632275\n",
-       "1113.0    1113.0   6475.711688\n",
-       "1114.0    1114.0  20091.239362\n",
-       "1115.0    1115.0   5729.763636\n",
+       "       Store_ID     Avg_Sales\n",
+       "1.0         1.0   4825.704485\n",
+       "2.0         2.0   4863.668407\n",
+       "3.0         3.0    6909.00266\n",
+       "4.0         4.0    9371.87664\n",
+       "5.0         5.0   4656.209302\n",
+       "...         ...           ...\n",
+       "1111.0   1111.0   5493.231579\n",
+       "1112.0   1112.0  11131.632275\n",
+       "1113.0   1113.0   6475.711688\n",
+       "1114.0   1114.0  20091.239362\n",
+       "1115.0   1115.0   5729.763636\n",
        "\n",
        "[1115 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,17 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "c413df45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fbfc6d2ba00>]"
+       "[<matplotlib.lines.Line2D at 0x7f66e592fd60>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -263,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "01283f25",
    "metadata": {},
    "outputs": [
@@ -273,7 +228,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -296,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "4ae1a675",
    "metadata": {},
    "outputs": [
@@ -306,7 +261,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -329,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3547cfbe",
    "metadata": {},
    "outputs": [],
@@ -341,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "c6bfae22",
    "metadata": {},
    "outputs": [
@@ -351,7 +306,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "8ed57f95",
    "metadata": {},
    "outputs": [
@@ -435,15 +390,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      Store   Sales  Store_ID    Avg_Sales\n",
-       "0     353.0  9336.0     353.0  4977.901345\n",
-       "46    353.0  5828.0     353.0  4977.901345\n",
-       "1122  353.0  4903.0     353.0  4977.901345\n",
-       "2186  353.0  7418.0     353.0  4977.901345\n",
-       "2246  353.0  6223.0     353.0  4977.901345"
+       "      Store   Sales Store_ID    Avg_Sales\n",
+       "0     353.0  9336.0    353.0  4977.901345\n",
+       "46    353.0  5828.0    353.0  4977.901345\n",
+       "1122  353.0  4903.0    353.0  4977.901345\n",
+       "2186  353.0  7418.0    353.0  4977.901345\n",
+       "2246  353.0  6223.0    353.0  4977.901345"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,12 +409,12 @@
     "                                left_on='Store', right_on='Store_ID', \n",
     "                                how='left')\n",
     "\n",
-    "combine_df_4metric.loc[a[\"Store\"]==353,:].head()"
+    "combine_df_4metric.loc[combine_df_4metric.Store==353,:].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "7c8b53fb",
    "metadata": {},
    "outputs": [
@@ -469,7 +424,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "id": "b48904cd",
    "metadata": {},
    "outputs": [],
@@ -489,130 +444,45 @@
     "    preds = preds.reshape(-1)\n",
     "    actuals = actuals.reshape(-1)\n",
     "    assert preds.shape == actuals.shape\n",
-    "    print(actuals)\n",
-    "    print(np.linalg.norm((actuals - preds) / actuals))\n",
     "    return 100 * np.linalg.norm((actuals - preds) / actuals) / np.sqrt(preds.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 152,
    "id": "e4fba950",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "count    77119.000000\n",
-      "mean      7029.522789\n",
-      "std       3067.231079\n",
-      "min        638.000000\n",
-      "25%       4965.000000\n",
-      "50%       6467.000000\n",
-      "75%       8431.000000\n",
-      "max      38037.000000\n",
-      "Name: Sales, dtype: float64\n",
-      "[ 9336. 10770.  7793. ... 10564. 12302.  3913.]\n",
-      "nan\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds_avgs = np.array(combine_df_4metric['Avg_Sales'])\n",
     "actuals_avgs = np.array(combine_df_4metric['Sales'])\n",
     "\n",
-    "preds_avgs = preds_avgs.reshape(preds_avgs.shape[0],1)\n",
-    "actuals_avgs = actuals_avgs.reshape(actuals_avgs.shape[0],1)\n",
-    "print(combine_df_4metric['Sales'].describe())\n",
-    "#np.array(actuals_avgs).isnull().values\n",
-    "metric(preds_avgs, actuals_avgs)"
+    "# preds_avgs = preds_avgs.reshape(preds_avgs.shape[0],1)\n",
+    "# actuals_avgs = actuals_avgs.reshape(actuals_avgs.shape[0],1)\n",
+    "\n",
+    "preds_avgs_int = np.round((preds_avgs).astype(np.float)).astype(int)\n",
+    "actuals_avgs_int = np.round((actuals_avgs).astype(np.float)).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "dc205307",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(77119, 1)\n",
-      "(77119, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "assert preds_avgs.shape == actuals_avgs.shape\n",
-    "print(preds_avgs.shape)\n",
-    "print(actuals_avgs.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "16457b93",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "nan\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predsT = np.array(preds_avgs.reshape(-1))\n",
-    "actualsT = np.array(actuals_avgs.reshape(-1))\n",
-    "print(np.sum(predsT == np.nan))\n",
-    "print(np.linalg.norm((1 - predsT) / 1))\n",
-    "#assert predsT.shape == actualsT.shape\n",
-    "100 * np.linalg.norm((actualsT - predsT) / actualsT) / np.sqrt(predsT.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "e5dc7b08",
+   "execution_count": 153,
+   "id": "b7765df6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nan"
+       "2.99216427922435e+16"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.norm((actualsT - predsT))"
+    "metric(preds_avgs_int, actuals_avgs_int)"
    ]
   }
  ],
