data cleaning to be contd

--- a/Sabine full analysis.ipynb
+++ b/Sabine full analysis.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d392aa80",
+   "id": "a2f2ac6e",
    "metadata": {},
    "source": [
     "# Data Preprocessing 1"
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "ae9f3b7d",
+   "id": "1d977bc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "f0f62151",
+   "id": "f2602216",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "68f2a0b0",
+   "id": "7d55c92d",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f48df96",
+   "id": "1064c117",
    "metadata": {},
    "source": [
     "# Generate validation set"
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a8ea26bc",
+   "id": "86e896e8",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "5420b7e6",
+   "id": "bf82d67c",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb13d89a",
+   "id": "b8b7c549",
    "metadata": {},
    "source": [
     "# Baseline model"
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b579c977",
+   "id": "84f1e180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e8fe053d",
+   "id": "b70fc49d",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e2bb9c",
+   "id": "acf3cf71",
    "metadata": {},
    "source": [
     "# Data preprocessing 2"
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "6ebc3609",
+   "id": "8d7ecf6f",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2f07b8c",
+   "id": "8047d3fc",
    "metadata": {},
    "source": [
     "# Check for stationarity"
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b88589bc",
+   "id": "ac797dce",
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "930e740e",
+   "id": "44969e02",
    "metadata": {},
    "outputs": [
     {
@@ -4094,7 +4094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93540b75",
+   "id": "6ef8fcaf",
    "metadata": {},
    "source": [
     "# Merge train and store"
@@ -4102,8 +4102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "5883b532",
+   "execution_count": 147,
+   "id": "28494ed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4116,8 +4116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "7889173c",
+   "execution_count": 148,
+   "id": "b15e8301",
    "metadata": {},
    "outputs": [
     {
@@ -4301,7 +4301,7 @@
        "4              NaN              NaN               NaN  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4312,7 +4312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418089ea",
+   "id": "ecf40da4",
    "metadata": {},
    "source": [
     "# Stationary model"
@@ -4320,8 +4320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "9c6fd0f9",
+   "execution_count": 149,
+   "id": "3bca37e6",
    "metadata": {},
    "outputs": [
     {
@@ -4390,7 +4390,7 @@
        "      <th>0</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>353.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3139.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -4413,7 +4413,7 @@
        "      <th>1</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>335.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2401.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -4436,7 +4436,7 @@
        "      <th>2</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>512.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2646.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -4459,7 +4459,7 @@
        "      <th>3</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>494.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3113.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -4482,7 +4482,7 @@
        "      <th>4</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>530.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2907.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -4507,11 +4507,11 @@
       ],
       "text/plain": [
        "        Date  Store  DayOfWeek   Sales  Open  Promo StateHoliday  \\\n",
-       "0 2013-01-01  353.0        2.0  3139.0   1.0    0.0       Public   \n",
-       "1 2013-01-01  335.0        2.0  2401.0   1.0    0.0       Public   \n",
-       "2 2013-01-01  512.0        2.0  2646.0   1.0    0.0       Public   \n",
-       "3 2013-01-01  494.0        2.0  3113.0   1.0    0.0       Public   \n",
-       "4 2013-01-01  530.0        2.0  2907.0   1.0    0.0       Public   \n",
+       "0 2013-01-01  353.0          1  3139.0   1.0    0.0       Public   \n",
+       "1 2013-01-01  335.0          1  2401.0   1.0    0.0       Public   \n",
+       "2 2013-01-01  512.0          1  2646.0   1.0    0.0       Public   \n",
+       "3 2013-01-01  494.0          1  3113.0   1.0    0.0       Public   \n",
+       "4 2013-01-01  530.0          1  2907.0   1.0    0.0       Public   \n",
        "\n",
        "   SchoolHoliday Store_cat StoreType Assortment  CompetitionDistance  \\\n",
        "0            1.0         l         b          b                900.0   \n",
@@ -4535,7 +4535,7 @@
        "4              NaN              NaN               NaN  2013      1  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4545,6 +4545,7 @@
     "    print(df.Date)\n",
     "    df['Year'] = df.Date.dt.year\n",
     "    df['Month'] = df.Date.dt.month\n",
+    "    df['DayOfWeek'] = df.Date.dt.dayofweek\n",
     "    return df  \n",
     "merge_data['Date'] = pd.to_datetime(merge_data['Date'], errors='coerce')\n",
     "merge_data = add_time_features(merge_data)\n",
@@ -4553,13 +4554,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 155,
+   "id": "a7f65af9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12831\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# imput most frequent value \"0\" resp. \"No\" \n",
+    "impute_mode = ['SchoolHoliday', 'StateHoliday', \"Promo\", \"Open\"]\n",
+    "\n",
+    "#merge_data.info()\n",
+    "print(len(merge_data[merge_data['StateHoliday'].isnull()]))\n",
+    "\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, attribute_names):\n",
+    "        self.attribute_names = attribute_names\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X):\n",
+    "        return X[self.attribute_names].values\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "cat_pipeline = Pipeline([\n",
+    "    ('selector', DataFrameSelector(impute_mode)),\n",
+    "    ('imputer', SimpleImputer(strategy=\"most_frequent\")),\n",
+    "])\n",
+    "\n",
+    "merged_tr = cat_pipeline.fit_transform(merge_data)\n",
+    "new_merged = merge_data.copy()\n",
+    "new_merged.loc[:, impute_mode] = merged_tr\n",
+    "#print(new_merged)\n",
+    "print(len(new_merged[new_merged['StateHoliday'].isnull()]))\n",
+    "\n",
+    "# Categories\n",
+    "one_hot_encode = ['StateHoliday', 'SchoolHoliday', 'Store_cat', 'StoreType', 'Assortment', \n",
+    "                  'Month', 'DayOfWeek', 'Promo']\n",
+    "numerical_features = ['CompetitionDistance', ]\n",
+    "target = ['Sales']\n",
+    "\n",
+    "keep_features = one_hot_encode + numerical_features + target\n",
+    "newtrain = new_merged.loc[:, keep_features]\n",
+    "newtrain.loc[:, one_hot_encode]  = newtrain.loc[:, one_hot_encode].astype(str)\n",
+    "\n",
+    "newtrain = pd.get_dummies(newtrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "44fee93b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'fit'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-156-c600584237b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m ])\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mdata_tr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnum_pipeline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mnewtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumerical_features\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_tr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mnewtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/minicomp/lib/python3.9/site-packages/sklearn/pipeline.py\u001b[0m in \u001b[0;36mfit_transform\u001b[0;34m(self, X, y, **fit_params)\u001b[0m\n\u001b[1;32m    385\u001b[0m             \u001b[0mfit_params_last_step\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfit_params_steps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    386\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_step\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'fit_transform'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 387\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mlast_step\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mfit_params_last_step\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    388\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    389\u001b[0m                 return last_step.fit(Xt, y,\n",
+      "\u001b[0;32m~/miniconda3/envs/minicomp/lib/python3.9/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36mfit_transform\u001b[0;34m(self, X, y, **fit_params)\u001b[0m\n\u001b[1;32m    697\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    698\u001b[0m             \u001b[0;31m# fit method of arity 1 (unsupervised transformation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 699\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mfit_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    700\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    701\u001b[0m             \u001b[0;31m# fit method of arity 2 (supervised transformation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'fit'"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Scale target and distance\n",
+    "num_pipeline = Pipeline([\n",
+    "    ('selector', DataFrameSelector(numerical_features + target)),\n",
+    "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "    ('std_scaler', StandardScaler),\n",
+    "    \n",
+    "])\n",
+    "\n",
+    "data_tr = num_pipeline.fit_transform(newtrain)\n",
+    "newtrain.loc[:, numerical_features + target] = data_tr\n",
+    "newtrain.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "72e43735",
+   "id": "90ddd68a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "one_hot_cats = ['StateHoliday', 'Store_cat', 'StoreType', 'Assortment', 'Week']"
-   ]
+   "source": []
   }
  ],
  "metadata": {
