--- a/Sabine full analysis.ipynb
+++ b/Sabine full analysis.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d76973c7",
+   "id": "2058960f",
    "metadata": {},
    "source": [
     "# Data Preprocessing 1"
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfdf301c",
+   "id": "adfff8ac",
    "metadata": {},
    "source": [
     "# Generate validation set"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "ee66c218",
+   "id": "eb05c177",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "8a83bfef",
+   "id": "6bfed74c",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72684268",
+   "id": "fb64d06b",
    "metadata": {},
    "source": [
     "# Baseline model"
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "13e7f85d",
+   "id": "468dbe51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "d99c1a80",
+   "id": "540e83f6",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cba28e4a",
+   "id": "4b73bcb5",
    "metadata": {},
    "source": [
     "# Data preprocessing 2"
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "e43c6358",
+   "id": "f8f4d6a0",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ff27d6c",
+   "id": "8347ec13",
    "metadata": {},
    "source": [
     "# Check for stationarity"
@@ -701,8 +701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c05b04a2",
+   "execution_count": 217,
+   "id": "34d782b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,8 +798,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 218,
+   "id": "9b22dcb2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sabine/miniconda3/envs/minicomp/lib/python3.9/site-packages/pandas/core/frame.py:4308: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        2013-01-01\n",
+      "1        2013-01-01\n",
+      "2        2013-01-01\n",
+      "3        2013-01-01\n",
+      "4        2013-01-01\n",
+      "            ...    \n",
+      "422586   2014-04-30\n",
+      "422587   2014-04-30\n",
+      "422588   2014-04-30\n",
+      "422589   2014-04-30\n",
+      "422590   2014-04-30\n",
+      "Name: Date, Length: 422591, dtype: datetime64[ns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "transformed_train = preprocess(newtrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "3913653f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        CompetitionDistance     Sales  StateHoliday_0.0  StateHoliday_a  \\\n",
+      "0                 -0.584752 -1.187571                 0               1   \n",
+      "1                 -0.689427 -1.426773                 0               1   \n",
+      "2                 -0.624813 -1.347363                 0               1   \n",
+      "3                 -0.538229 -1.195998                 0               1   \n",
+      "4                  1.645741 -1.262767                 0               1   \n",
+      "...                     ...       ...               ...             ...   \n",
+      "422586             0.166069 -0.688098                 0               0   \n",
+      "422587            -0.524014  0.657983                 0               0   \n",
+      "422588             1.579834  1.244968                 0               0   \n",
+      "422589            -0.141496  0.490411                 0               0   \n",
+      "422590             0.836767  1.751896                 0               0   \n",
+      "\n",
+      "        StateHoliday_b  StateHoliday_c  SchoolHoliday_1.0  Store_cat_l  \\\n",
+      "0                    0               0                  1            1   \n",
+      "1                    0               0                  1            0   \n",
+      "2                    0               0                  1            1   \n",
+      "3                    0               0                  1            0   \n",
+      "4                    0               0                  1            1   \n",
+      "...                ...             ...                ...          ...   \n",
+      "422586               0               0                  0            1   \n",
+      "422587               0               0                  0            0   \n",
+      "422588               0               0                  0            0   \n",
+      "422589               0               0                  0            1   \n",
+      "422590               0               0                  0            0   \n",
+      "\n",
+      "        Store_cat_m  Store_cat_vh  ...  Month_7  Month_8  Month_9  \\\n",
+      "0                 0             0  ...        0        0        0   \n",
+      "1                 0             1  ...        0        0        0   \n",
+      "2                 0             0  ...        0        0        0   \n",
+      "3                 0             0  ...        0        0        0   \n",
+      "4                 0             0  ...        0        0        0   \n",
+      "...             ...           ...  ...      ...      ...      ...   \n",
+      "422586            0             0  ...        0        0        0   \n",
+      "422587            1             0  ...        0        0        0   \n",
+      "422588            1             0  ...        0        0        0   \n",
+      "422589            0             0  ...        0        0        0   \n",
+      "422590            1             0  ...        0        0        0   \n",
+      "\n",
+      "        DayOfWeek_1  DayOfWeek_2  DayOfWeek_3  DayOfWeek_4  DayOfWeek_5  \\\n",
+      "0                 1            0            0            0            0   \n",
+      "1                 1            0            0            0            0   \n",
+      "2                 1            0            0            0            0   \n",
+      "3                 1            0            0            0            0   \n",
+      "4                 1            0            0            0            0   \n",
+      "...             ...          ...          ...          ...          ...   \n",
+      "422586            0            1            0            0            0   \n",
+      "422587            0            1            0            0            0   \n",
+      "422588            0            1            0            0            0   \n",
+      "422589            0            1            0            0            0   \n",
+      "422590            0            1            0            0            0   \n",
+      "\n",
+      "        DayOfWeek_6  Promo_1.0  \n",
+      "0                 0          0  \n",
+      "1                 0          0  \n",
+      "2                 0          0  \n",
+      "3                 0          0  \n",
+      "4                 0          0  \n",
+      "...             ...        ...  \n",
+      "422586            0          1  \n",
+      "422587            0          1  \n",
+      "422588            0          1  \n",
+      "422589            0          1  \n",
+      "422590            0          1  \n",
+      "\n",
+      "[422591 rows x 33 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(transformed_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2f3c10c6",
+   "id": "8c5d7be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "386d6885",
+   "id": "43fd0119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df792df",
+   "id": "f15dbeb7",
    "metadata": {},
    "source": [
     "# Merge train and store"
@@ -855,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6355d4f",
+   "id": "ade3bb6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee340349",
+   "id": "ce4a1ddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b3a64d",
+   "id": "67176424",
    "metadata": {},
    "source": [
     "# Stationary model"
@@ -887,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "167173ec",
+   "id": "9c1b0189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66910125",
+   "id": "0e49cd86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "add7634d",
+   "id": "651adb7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c914c59",
+   "id": "288daec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a9f44b8",
+   "id": "0c1c50b5",
    "metadata": {},
    "outputs": [],
    "source": []
