--- a/Final_evaluation.ipynb
+++ b/Final_evaluation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "9ca10f56",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.pipeline import FeatureUnion\n",
     "from pandas.tseries.offsets import DateOffset\n",
+    "import numpy as np\n",
     "\n",
     "# select specific columns for pipeline\n",
     "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
@@ -152,12 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "id": "e7faa7bb",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sabine/miniconda3/envs/minicomp/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (7) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    }
+   ],
    "source": [
     "# Load data\n",
     "import pandas as pd\n",
@@ -171,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "86ee0f1a",
    "metadata": {},
    "outputs": [],
@@ -183,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "da03007c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "0bb4bddf",
    "metadata": {},
    "outputs": [],
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "id": "6b82478a",
    "metadata": {},
    "outputs": [
